--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 38.64.138.145, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.24MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: 38.75.136.21, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.114.114.19, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.68.134.85, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇳🇱 荷兰-3.32MB/s(Youtube:不良林), server: 213.183.59.214, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 167.88.61.175, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: 185.167.116.24, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇫🇷 法国-2.57MB/s(Youtube:不良林), server: 145.239.1.100, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇳🇱 荷兰-1.54MB/s(Youtube:不良林), server: 185.246.155.23, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
