--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-1.63MB/s(Youtube:不良林), server: 213.183.63.221, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇫🇷 法国-2.57MB/s(Youtube:不良林), server: 145.239.1.100, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 172.99.190.39, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: 38.68.135.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 38.114.114.69, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-2.39MB/s(Youtube:不良林), server: 213.183.59.214, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇫🇷 法国-888.1KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: ifffffffuuuuuuus.qiqicdn2.cf, port: 443, type: vmess, uuid: 5a36cce4-0527-4d36-bf4a-6c215ef9c524, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /5a36cce4-0527-4d36-bf4a-6c215ef9c524-vmess, ws-headers: {Host: ifffffffuuuuuuus.qiqicdn2.cf}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-1.63MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.57MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-888.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
